@startuml Programa

title Diagrama de Clases
header Proyecto
footer Diagrama 1

class Centro {
    - String nombre
    - ListaPacientes pacientes
    - ListaTerapeutas terapeutas

    + Centro(String nombre)
}

class Persona {
    - int rut
    - String nombre
    - int edad

    + Persona(String nombre, String rut, int edad)

    + int getRut()
    + void setRut(int rut)
    + String getNombre()
    + void setNombre(String nombre)
    + int getEdad()
    + void setEdad(int edad)

    + String obtenerDatos()
}

class ListaPacientes {
    - HashMap<String, Paciente> tablaHashPacientes
    
    + ListaPacientes()
    
    + Paciente getPaciente(String rut)
    + boolean contienePaciente(String rut)
    + boolean agregarPaciente(Paciente paciente)
    + boolean eliminarPaciente(String rut)
    + String listarPacientes()
    + ListaSesiones getSesiones()
    + ListaSesiones getSesiones(int anio)
    + void guardarPacientesCSV()
    + void guardarSesionesCSV()
}

class Paciente {
    - String direccion;
    - String historialMedico;
    - ListaSesiones sesiones;

    + Paciente(String nombre, String rut, int edad, String direccion, String historialMedico)
    + Paciente()

    + String getDireccion()
    + void setDireccion(String direccion)
    + String getHistorialMedico()
    + void setHistorialMedico(String historialMedico)
    
    + void agregarSesion(SesionTerapia sesion)
    + String listarSesiones()
    + boolean eliminarSesion(LocalDate fecha)
    + boolean eliminarSesion(SesionTerapia sesion)
    + ListaSesiones obtenerListaSesiones()
    + boolean mismaFecha(ListaSesiones sesiones, LocalDate fecha)
    + String obtenerDatos()
}

class ListaTerapeutas {
    - HashMap<String, Terapeuta> tablaHashTerapeutas;
    
    + ListaTerapeutas()
    
    + boolean contieneTerapeuta(String rut)
    + Terapeuta getTerapeuta(String rut)
    + String listarTerapeutas()
}

class Terapeuta {
    - String especialidad;
    - ListaSesiones sesiones;
    
    + Terapeuta()
    + Terapeuta(String nombre, String rut, int edad, String especialidad)
    
    + String getEspecialidad()
    + void setEspecialidad(String especialidad)

    + void agregarSesion(SesionTerapia sesion)
    + String listarSesiones() 
    + String obtenerDatos()
}

class ListaSesiones {
    - ArrayList<SesionTerapia> lista

    + ListaSesiones()
    
    + SesionTerapia getSesion(int i)
    + boolean agregarSesion(SesionTerapia sesion)
    + boolean eliminarSesion(LocalDate fecha)      
    + boolean eliminarSesion(SesionTerapia sesion)
    + String listarSesiones()
    + boolean sobreescribirSesion
    + ArrayList<SesionTerapia> filtrarSesionesPorAnio(int anio)
    + SesionTerapia obtenerSesionActual()
    + SesionTerapia siguiente()
    + void reiniciarRecorrido()
}

class SesionTerapia {
    - LocalDate fecha;
    - String tipoTerapia;
    - String duracion;
    - String observaciones;
    - int calificacionMejora;
    
    + SesionTerapia(LocalDate fecha, String tipoTerapia, String duracion, String observaciones, int calificacionMejora)

    + LocalDate getFecha()
    + void setFecha(LocalDate fecha)
    + String getTipoTerapia() 
    + void setTipoTerapia(String tipoTerapia)
    + String getDuracion()
    + void setDuracion(String duracion)
    + String getObservaciones() 
    + void setObservaciones(String observaciones)
    + int getCalificacionMejora()
    + void setCalificacionMejora(int calificacionMejora)

    + String obtenerDatos()
}

class Utilidades {
    # void limpiarPantalla()
    # String formatearRut(String rut)
    # void presioneTeclaParaContinuar()
    # void leerArchivoPacientes(Map<String, Paciente> tablaHashPacientes)
    # void guardarPacienteCSV(String nombre, String rut, int edad, String direccion, String historialMedico)
    # void leerArchivoSesiones(Map<String, Paciente> tablaHashPacientes)
    # void guardarSesionesCSV(LocalDate fecha, String tipoTerapia, String duracion, String observaciones, int calificacionMejora, String rut)
}

Centro -[#black]-* ListaPacientes : Contiene
Centro -[#black]-* ListaTerapeutas : Contiene
Persona --|> Paciente : Es
Persona --|> Terapeuta : Es
ListaPacientes --|> Paciente : Contiene
ListaTerapeutas --|> Terapeuta : Contiene
Paciente --|> ListaSesiones : Contiene
Terapeuta --|> ListaSesiones : Contiene
ListaSesiones --|> SesionTerapia : Está hecha

@enduml
